# capacidade_produtiva

./: .env.example  README.md  config.env  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  create_config.py  pyproject.toml  pytest_output.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_sap_snapshot.py  0002_log_ingestao_execucao.py  0003_sap_analytics_view.py  0004_kpi_fato_ut_subfase.py  0005_kpi_tabelas_normalizadas.py  0006_dgeo_usuario_campos_completos.py  0007_capacidade_agenda.py  0008_agenda_soft_delete_blocos.py  0009_corrige_agenda_soft_delete_e_blocos.py  0010_tipo_atividade_cores_blocos.py  0011_add_deconsolidate_enum.py  0011_tipos_atividade_ajuste.py
backend/db/views/sap_analytics/: 00_create_schema.sql  vw_atividade_enriquecida.sql  vw_ut_enriquecida.sql
backend/docs/: CAPACIDADE_README.md  api.css  api.js  index.html
backend/scripts/: create_config.py
backend/server/: config.env
backend/src/cp/: __init__.py  main.py
backend/src/cp/api/: admin_sap.py  deps.py  exception_handlers.py
backend/src/cp/api/rotas/: agenda.py  agenda_v2.py  atividades.py  auth.py  capacidade.py  capacidade_v2.py  health.py  kpi.py  log.py  relatorios.py  sync.py  usuarios.py
backend/src/cp/application/: sap_ingestao_service.py  sap_sync_service.py  sync_history_service.py
backend/src/cp/cli/: bootstrap.py  bootstrap_config.py  bootstrap_db.py  check.py  configurar.py  create_config.py  db.py  inicializar.py  sync_sap.py
backend/src/cp/config/: logging_config.py  settings.py
backend/src/cp/domain/: ingestao.py  usuario.py
backend/src/cp/domain/capacidade/: __init__.py  constants.py  enums.py  exceptions.py  models.py  schemas.py
backend/src/cp/infrastructure/: auth.py  auth_provider.py  db.py  http_client.py  ingestao_execucao_repository.py
backend/src/cp/infrastructure/sap_sync/: analytics_manager.py  analytics_views.py  kpi_manager.py  kpi_tables.py  kpi_views.py  sync.py
backend/src/cp/repositories/capacidade/: __init__.py  agenda_lancamento.py  agenda_prevista.py  audit_log.py  capacidade_dia.py  feriado.py  indisponibilidade.py  parametro_capacidade.py  repositories.py  tipo_atividade.py
backend/src/cp/scripts/: check.py
backend/src/cp/services/capacidade/: __init__.py  agenda_service.py  audit_service.py  capacidade_service.py  consolidacao_service.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_auth_provider_factory.py  test_create_config.py  test_kpi_tabelas.py  test_sap_sync_integration.py  test_smoke.py  test_ut_subfase_conclusao.py  test_views_sap_analytics.py
backend/tests/application/: test_sap_sync_service.py
backend/tests/capacidade/: __init__.py  test_agenda_service.py  test_capacidade_service.py  test_consolidacao_audit.py  test_regras_negocio.py  test_repositories.py
backend/tests/cli/: test_bootstrap_db.py  test_check.py  test_configurar.py  test_db.py
backend/tests/fixtures/: sap_seed.sql
backend/tests/infrastructure/: test_http_client.py
backend/tests/scripts/: test_create_config.py
docs/: DOCUMENTO_TECNICO_CAPACIDADE_PRODUTIVA.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/frontend/src/: index.css
frontend/frontend/src/components/calendar/: Calendar.module.css
frontend/frontend/src/components/ui/: Modal.module.css
frontend/frontend/src/pages/AgendaPrevista/: AgendaPage.module.css  index.tsx
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: agenda.ts  client.ts  endpoints.ts
frontend/src/components/admin/: Configuracoes.module.css  ConfiguracoesAdmin.tsx
frontend/src/components/agenda/: Agenda.module.css  ConsolidacaoModal.tsx  DayDetailPanel.tsx  LancamentoForm.tsx  LancamentoLoteModal.tsx  PlanejamentoModal.tsx  index.ts
frontend/src/components/calendar/: Calendar.module.css  CalendarGrid.tsx  CalendarHeader.tsx  DayCell.tsx  index.ts
frontend/src/components/layout/: AppShell.module.css  AppShell.tsx  TopNav.module.css  TopNav.tsx
frontend/src/components/ui/: Common.module.css  Common.tsx  Drawer.module.css  Drawer.tsx  EmElaboracao.module.css  EmElaboracao.tsx  Modal.module.css  Modal.tsx  index.ts
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: index.ts  useCalendar.ts
frontend/src/pages/AgendaPrevista/: AgendaPage.module.css  index.tsx
frontend/src/pages/AgendaRealizada/: AgendaPage.module.css  index.tsx
frontend/src/pages/Atividades/: index.tsx
frontend/src/pages/BlocosProjeto/: index.tsx
frontend/src/pages/Configuracoes/: index.tsx
frontend/src/pages/Dashboard/: Dashboard.module.css  index.tsx
frontend/src/pages/Exportar/: index.tsx
frontend/src/pages/GerenciarAgendas/: index.tsx
frontend/src/pages/Login/: Login.module.css  index.tsx
frontend/src/pages/MinhaAgenda/: index.tsx
frontend/src/pages/Operadores/: index.tsx
frontend/src/pages/Perfil/: Perfil.module.css  index.tsx
frontend/src/types/: agenda.ts  index.ts
