[project]
name = "capacidade-produtiva"
version = "0.1.0"
description = "Sistema de gestão operacional CapacidadeProdutiva"
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    "fastapi>=0.115.0",
    "psycopg2-binary>=2.9.11",
    "uvicorn[standard]>=0.32.0",
]

# ---------------------------------------------------------------------------
# Build system
# ---------------------------------------------------------------------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cp"]

# ---------------------------------------------------------------------------
# Entry points
# ---------------------------------------------------------------------------

[project.scripts]
create-config = "cp.cli.create_config:main"

# ---------------------------------------------------------------------------
# Ferramentas de desenvolvimento
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["cp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["psycopg2", "psycopg2.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
addopts = "--cov=cp --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
]

# ---------------------------------------------------------------------------

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy==1.10.0",
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
    "ruff==0.4.4",
    "types-psycopg2",
]