[project]
name = "capacidade-produtiva"
version = "0.1.0"
description = "Sistema de gestão operacional CapacidadeProdutiva"
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.32.0",
    "PyJWT>=2.8.0",
    "aiofiles>=23.0.0",
]


[project.scripts]
configurar = "cp.cli.bootstrap:main"
inicializar = "cp.cli.inicializar:main"
inicializar-db = "cp.cli.bootstrap_db:main"
inicializar-config = "cp.cli.bootstrap_config:main"
gerar-config = "cp.cli.create_config:main"
sincronizar-sap = "cp.cli.sync_sap:main"
check = "cp.scripts.check:main"

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "mypy==1.18.2",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "ruff==0.13.1",
    "types-psycopg2==2.9.21.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cp"]



[tool.ruff]
line-length = 150
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["cp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["psycopg2", "psycopg2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=cp --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.:",
]


[tool.coverage.run]
branch = true
source = ["src/cp"]
omit = ["src/cp/cli/*"]


